--- a/module/system/src/main/res/values/strings.xml
+++ b/module/system/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="tab_system">体系</string>
     <string name="tab_navigation">导航</string>
+    <string name="item_more">More ></string>
 </resources>
