--- a/module/home/src/main/res/values/strings.xml
+++ b/module/home/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home_header_text">Welcome to Play Android.</string>
+    <string name="home_category_official">公众号</string>
+    <string name="home_category_project">项目</string>
 </resources>
